Page MenuHome GnuPG

GnuPG 2.3 Windows localized gpgconf output broken
Closed, ResolvedPublic

Description

Installed from the last beta installer gpgconf --list-options gpg on a german windows system lists options this way:

trust-model:0:3:Project-Id-Version%3a gnupg-2.3.0%0aReport-Msgid-Bugs-To%3a translations@gnupg.org%0aPO-Revision-Date%3a 2021-02-26 14%3a44+0100%0aLast-Translator%3a Werner Koch <wk@gnupg.org>%0aLanguage-Team%3a German <de@li.org>%0aLanguage%3a de%0aMIME-Version%3a 1.0%0aContent-Type%3a text/plain; charset=UTF-8%0aContent-Transfer-Encoding%3a 8bit%0aPlural-Forms%3a nplurals=2; plural=n != 1;%0a:1:1::::

Related Objects

Event Timeline

aheinecke triaged this task as Normal priority.Mar 25 2021, 3:14 PM
aheinecke created this task.

Btw this only occurs for some options:

For comparison, on an English Linux system the options also look wrong, i.e. all options that are problematic in the German translation are "raw" option names enclosed in double quotes. It seems that the untranslated description of the options is already missing.

Example from gpg.c:

ARGPARSE_s_n (oQuiet,	  "quiet",   N_("be somewhat more quiet")),
[...]
ARGPARSE_s_n (oNoGreeting, "no-greeting", "@"),

The quiet option has a human readable description, but the no-greeting option does not have one. Consequently, gpgconf --list-options gpg gives the following result:

[...]
quiet:0:0:be somewhat more quiet:0:0::::
no-greeting:0:3::0:0::::1
[...]

Ahh, and I understand the behavior for German. The meta data of translation files is stored as translation of the empty string. Apparently, that's why the translation engine shows the meta data as translation of the empty option descriptions. Very weird. I don't think that's how gettext should work.

yep, Should be fixed in libgpg-error/src/w32-gettext.c unless we want a way to retrieve the meat data. We can also and faster fix this in gnupg proper.