gpgconf: Do not i18n an empty string to the PO files meta data.

* tools/gpgconf-comp.c (my_dgettext): Ignore empty strings.
--

GnuPG-bug-id: 5363
(cherry picked from commit 18d884f8411a0ca263a8aa588bb49eb0dae9ee19)